Eliminating compiler errors.